log
Fri 09 Sep 2022 04:41:42 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
daeee85
Fri 09 Sep 2022 04:48:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
df89a49
Fri 09 Sep 2022 04:48:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = NULL;
      |                 ^
Compilation failed
fb12468
Fri 09 Sep 2022 04:48:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[][] = NULL;
      |                 ^
Compilation failed
5796dc9
Fri 09 Sep 2022 04:48:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7eca3f1
Fri 09 Sep 2022 04:49:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fce0ee2
Fri 09 Sep 2022 04:50:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10bc0fa
Fri 09 Sep 2022 05:01:30 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1e42998
Fri 09 Sep 2022 05:08:20 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: unused variable ‘i’ [-Werror=unused-variable]
   44 |   size_t i =hash(key,map->capacity);
      |          ^
hashmap.c:43:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   43 |   Pair *newPair = createPair(key,value);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1cb4f9d
